new Integer(int) -> Integer.valueOf(int)
git-svn-id: file:///home/apertium/svn-mirror/apertium-sf-net/trunk/lttoolbox-java@22833 2c8c2297-680c-4500-a755-649f80e260dd